noinst_HEADERS = \
	logjam/cirq.h \
	logjam/config.h \
	logjam/connect.h \
	logjam/ctype.h \
	logjam/flume.h \
	logjam/log.h \
	logjam/parser.h \
	logjam/reader.h \
	logjam/resolve.h \
	logjam/sender.h \
	logjam/socket.h \
	logjam/strchrnul.h \
	logjam/strlcat.h \
	logjam/strlcpy.h \
	logjam/types.h \
	\
	logjam/logjam.h
